# lang-quiz

./: Cargo.toml
data/: biglist.csv  core-irreg-verbs.csv  estar.csv  ir-no-pronoun.csv  ir.csv  number0to10.csv  poder.csv  pronouns-personal.csv  pronouns-possessive.csv  pt-nouns.csv  ser.csv  ter.csv  verb-ending-present.csv  verbs.csv
data/verbs/: estar.csv  infinitives.csv  ir.csv  regular-conjugations.csv  ser.csv  ter.csv  ver.csv  vim-vi.csv  vir.csv
examples/: SELECIONE.sql
scripts/: scrape-words.js
src/: domain.rs  game.rs  main.rs  ui.rs
