[package]
name = "lang-quiz"
version = "0.1.0"
authors = ["Dan Munckton <munckfish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
trivial_colours = "0.3.0"
structopt = "0.3.20"
